[package]
name = "openhuman"
version = "0.1.0"
edition = "2021"
authors = ["OpenHuman <openhuman.ai@gmail.com>"]
description = "OpenHuman.ai: Virtual human assistance"
license-file = "LICENSE.txt"
homepage = "http://openhuman.ai"
repository = "https://github.com/OpenHuman-ai/rust-openhuman"
readme = "README.md"
documentation = "http://openhuman.ai/docs"
categories = ["ai-tools"]
keywords = ["openai", "openhuman", "openengine", "virtual human"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
time = "0.1.12"
actix-web = "3.3.2"
env_logger = "0.9.0"
log = "0.4.17"
